--- a/CustomersSite/Views/Shared/Components/Categories/Default.cshtml
+++ b/CustomersSite/Views/Shared/Components/Categories/Default.cshtml
@@ -3,20 +3,131 @@
     ViewData["Title"] = "HomePage";
 }
 
-<table cellpadding="10" cellspacing="10" border="1">
-    <tr>
-        <th>Name</th>
-        <th>Description</th>
-        <th>Image</th>
-        <th>Amount</th>
-    </tr>
-    @foreach (var catogories in Model)
-    {
-        <tr>
-            <th>@catogories.Name</th>
-            <th>@catogories.Description</th>
-            <th>@catogories.Image</th>
-            <th>@catogories.Amount</th>
-        </tr>
-    }
-</table>
+<div class="app_container">
+    <div class="grid">
+        <div class="grid__row app_content">
+            <div class="grid__column-2">
+                <nav class="category">
+                    <h3 class="category-heading">
+                        <i class="category-heading-icon fa-solid fa-list"></i>
+                        Category
+                    </h3>
+
+                    <ul class="category-list">
+                        @foreach (var catogories in Model)
+                        {
+                            <li class="category-item">
+                                <a href="#" class="category-item-link">@catogories.Name</a>
+                            </li>
+                        }
+                    </ul>
+                </nav>
+            </div>
+            <div class="grid__column-10">
+                <div class="home-filter">
+                    <span class="home-filter__label">Sort by</span>
+                    <button class="home-filter__btn btn">Popular</button>
+                    <button class="home-filter__btn btn btn--primary">Newest</button>
+                    <button class="home-filter__btn btn">Oldest</button>
+
+                    <div class="select-input">
+                        <span class="select-input__label">Price</span>
+                        <i class="select-input__icon fas fa-angle-down"></i>
+                        <ul class="select-input__list">
+                            <li class="select-input__item">
+                                <a href="" class="select-input__link">Low to high</a>
+                            </li>
+                            <li class="select-input__item">
+                                <a href="" class="select-input__link">High to low</a>
+                            </li>
+                        </ul>
+                    </div>
+
+                    <div class="home-filter__page">
+                        <span class="home-filter__page-num">
+                            <span class="home-filter__page-current">1</span>/14
+                        </span>
+
+                        <div class="home-filter__page-control">
+                            <a href="" class="home-filter__page-btn home-filter__page-btn--disabled">
+                                <i class="home-filter__page-icon fas fa-angle-left"></i>
+                            </a>
+                            <a href="" class="home-filter__page-btn">
+                                <i class="home-filter__page-icon fas fa-angle-right"></i>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="home-product">
+                    <div class="grid__row">
+                        <div class="grid__column-2-4">
+                            <a class="home-product-item" href="#">
+                                <div class="home-product-item__img" style="background-image: url(https://thoitrangbigsize.vn/wp-content/uploads/2019/09/1-6.jpg);">
+                                </div>
+                                <h4 class="home-product-item__name">
+                                    Áo Thun Cổ Trụ Đơn Giản Y Nguyên Bản Ver100 ofhaihw fwaf ohawi fhwao fhwa fhwoaihf woahf owahf owahf ao
+                                </h4>
+                                <div class="home-product-item__price">
+                                    <span class="home-product-item__price-old">1.200.000đ</span>
+                                    <span class="home-product-item__price-current">1.000.000đ</span>
+                                </div>
+                                <div class="home-product-item__action">
+                                    <span class="home-product-item__heart home-product-item__heart-liked">
+                                        <i class="home-product-item__heart-icon-empty fa-regular fa-heart"></i>
+                                        <i class="home-product-item__heart-icon-fill fa-solid fa-heart"></i>
+                                    </span>
+                                    <div class="home-product-item__rating">
+                                        <i class="home-product-item-star-gold fa-solid fa-star"></i>
+                                        <i class="home-product-item-star-gold fa-solid fa-star"></i>
+                                        <i class="home-product-item-star-gold fa-solid fa-star"></i>
+                                        <i class="home-product-item-star-gold fa-solid fa-star"></i>
+                                        <i class="fa-solid fa-star"></i>
+                                    </div>
+                                </div>
+                                <div class="home-product-item__sale-off">
+                                    <span class="home-product-item__sale-off-label">Sale</span>
+                                    <span class="home-product-item__sale-off-percent">10%</span>
+                                </div>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+
+                <ul class="pagination home-product__pagination">
+                    <li class="pagination-item">
+                        <a href="#" class="pagination-item__link">
+                            <i class="pagination-item__icon fas fa-angle-left"></i>
+                        </a>
+                    </li>
+                    <li class="pagination-item pagination-item__active">
+                        <a href="#" class="pagination-item__link">1</a>
+                    </li>
+                    <li class="pagination-item">
+                        <a href="#" class="pagination-item__link">2</a>
+                    </li>
+                    <li class="pagination-item">
+                        <a href="#" class="pagination-item__link">3</a>
+                    </li>
+                    <li class="pagination-item">
+                        <a href="#" class="pagination-item__link">4</a>
+                    </li>
+                    <li class="pagination-item">
+                        <a href="#" class="pagination-item__link">5</a>
+                    </li>
+                    <li class="pagination-item">
+                        <a href="#" class="pagination-item__link">...</a>
+                    </li>
+                    <li class="pagination-item">
+                        <a href="#" class="pagination-item__link">14</a>
+                    </li>
+                    <li class="pagination-item">
+                        <a href="#" class="pagination-item__link">
+                            <i class="pagination-item__icon fas fa-angle-right"></i>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </div>
+</div>
