--- a/CustomersSite/Views/Shared/_Layout.cshtml
+++ b/CustomersSite/Views/Shared/_Layout.cshtml
@@ -26,45 +26,149 @@
                         <li class="header__navbar-item header__navbar-item--has-qr">
                             Download App
                             <div class="header__qr">
-                                <img src="./img/qr_code.png" alt="QR code" class="header__qr-img">
+                                <img src="/img/qr_code.png" alt="QR code" class="header__qr-img">
                                 <div class="header__qr-apps">
                                     <a href="" class="header__qr-link-left">
-                                        <img src="./img/app_store.png" alt="App Store" class="header__qr-download-img">
+                                        <img src="/img/app_store.png" alt="App Store" class="header__qr-download-img">
                                     </a>
                                     <a href="" class="header__qr-link-right">
-                                        <img src="./img/gg_play.png" alt="Goggle Play" class="header__qr-download-img">
+                                        <img src="/img/gg_play.png" alt="Goggle Play" class="header__qr-download-img">
                                     </a>
                                 </div>
                             </div>
                         </li>
                     </ul>
                     <ul class="header__navbar-list">
-                        <li class="header__navbar-item header__navbar-item--strong header__navbar-item--separate">Register</li>
-                        <li class="header__navbar-item header__navbar-item--strong">Login</li>
+                        <!-- <li class="header__navbar-item header__navbar-item--strong header__navbar-item--separate">Register</li>
+                        <li class="header__navbar-item header__navbar-item--strong">Login</li> -->
+                        <li class="header__navbar-item header__navbar-user">
+                            <img src="/img/qr_code.png" alt="" class="header__navbar-user-img">
+                            <span class="header__navbar-user-name">Huu Dong</span>
+
+                            <ul class="header__navbar-user-menu">
+                                <li class="header__navbar-user-item">
+                                    <a href="">My account</a>
+                                </li>
+                                <li class="header__navbar-user-item">
+                                    <a href="">History</a>
+                                </li>
+                                <li class="header__navbar-user-item">
+                                    <a href="">Log Out</a>
+                                </li>
+                            </ul>
+                        </li>
                     </ul>
                 </nav>
 
                 <div class="header-with-search">
                     <div class="header__logo">
-                        <img src="./img/shopee.png" alt="logo" class="header__logo-img">
+                        <img src="/img/shopee.png" alt="logo" class="header__logo-img">
                     </div>
 
                     <div class="header__search">
+                        <div class="header__search-input-wrap">
+                            <input type="text" class="header__search-input" placeholder="Search product">
+                            <div class="header__search-history">
+                                <h3 class="header__search-history-heading">History</h3>
+                                <ul class="header__search-history-list">
+                                    <li class="header__search-history-item">
+                                        <a href="">Item 1</a>
+                                    </li>
+                                    <li class="header__search-history-item">
+                                        <a href="">Item 2</a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                        <button class="header__search-btn">
+                            <i class="header__search-btn-icon fas fa-search"></i>
+                        </button>
                     </div>
 
                     <div class="header__cart">
-                        <i class="header__cart-icon fa-solid fa-cart-shopping"></i>
+                        <div class="header__cart-wrap">
+                            <i class="header__cart-icon fa-solid fa-cart-shopping"></i>
+                            <span class="header__cart-notice">3</span>
+                            <!-- No Cart: header__cart-list--no-cart -->
+                            <div class="header__cart-list">
+                                <img src="./assets/img/qr_code.png" alt="" class="header__cart-no-cart-img">
+                                <span class="header__cart-list-no-cart-msg">
+                                    Nothing Now
+                                </span>
+                                <h4 class="header__cart-heading">Already adding</h4>
+                                <ul class="header__cart-list-item">
+                                    <li class="header__cart-item">
+                                        <img src="/assets/img/qr_code.png" alt="" class="header__cart-img">
+                                        <div class="header__cart-item-info">
+                                            <div class="header__cart_item-head">
+                                                <h5 class="header__cart-item-name">T-shirt</h5>
+                                                <div class="header__cart-item-price-wrap">
+                                                    <span class="header__cart-item-price">2.000.000đ</span>
+                                                    <span class="header__cart-item-multiply">x</span>
+                                                    <span class="header__cart-item-qnt">2</span>
+                                                </div>
+                                            </div>
+                                            <div class="header__cart-item-body">
+                                                <span class="header__cart-item-description">
+                                                    Classify : Silver
+                                                </span>
+                                                <span class="header__cart-item-remove">Delete</span>
+                                            </div>
+                                        </div>
+                                    </li>
+                                    <li class="header__cart-item">
+                                        <img src="/assets/img/qr_code.png" alt="" class="header__cart-img">
+                                        <div class="header__cart-item-info">
+                                            <div class="header__cart_item-head">
+                                                <h5 class="header__cart-item-name">T-shirt</h5>
+                                                <div class="header__cart-item-price-wrap">
+                                                    <span class="header__cart-item-price">2.000.000đ</span>
+                                                    <span class="header__cart-item-multiply">x</span>
+                                                    <span class="header__cart-item-qnt">2</span>
+                                                </div>
+                                            </div>
+                                            <div class="header__cart-item-body">
+                                                <span class="header__cart-item-description">
+                                                    Classify : Silver
+                                                </span>
+                                                <span class="header__cart-item-remove">Delete</span>
+                                            </div>
+                                        </div>
+                                    </li>
+                                    <li class="header__cart-item">
+                                        <img src="/assets/img/qr_code.png" alt="" class="header__cart-img">
+                                        <div class="header__cart-item-info">
+                                            <div class="header__cart_item-head">
+                                                <h5 class="header__cart-item-name">T-shirt</h5>
+                                                <div class="header__cart-item-price-wrap">
+                                                    <span class="header__cart-item-price">2.000.000đ</span>
+                                                    <span class="header__cart-item-multiply">x</span>
+                                                    <span class="header__cart-item-qnt">2</span>
+                                                </div>
+                                            </div>
+                                            <div class="header__cart-item-body">
+                                                <span class="header__cart-item-description">
+                                                    Classify : Silver
+                                                </span>
+                                                <span class="header__cart-item-remove">Delete</span>
+                                            </div>
+                                        </div>
+                                    </li>
+                                </ul>
+
+                                <a href="#" class="header__cart-view-cart btn btn--primary">View cart</a>
+                            </div>
+
+                        </div>
                     </div>
                 </div>
             </div>
         </header>
     </div>
 
-    <div class="container">
-        <main role="main" class="pb-3">
-            @RenderBody()
-        </main>
-    </div>
+    @*RenderBody*@
+     @RenderBody()
+
 
     <footer class="border-top footer text-muted">
         <div class="container">
