--- a/CustomersSite/Views/Shared/_Layout.cshtml
+++ b/CustomersSite/Views/Shared/_Layout.cshtml
@@ -42,9 +42,9 @@
                         </li>
                     </ul>
                     <ul class="header__navbar-list">
-                        <!-- <li class="header__navbar-item header__navbar-item--strong header__navbar-item--separate">Register</li>
-                        <li class="header__navbar-item header__navbar-item--strong">Login</li> -->
-                        <li class="header__navbar-item header__navbar-user">
+                        <li class="header__navbar-item header__navbar-item--strong header__navbar-item--separate">Register</li>
+                        <li class="header__navbar-item header__navbar-item--strong">Login</li>
+@*                        <li class="header__navbar-item header__navbar-user">
                             <img src="https://scontent.fsgn2-4.fna.fbcdn.net/v/t39.30808-6/267904423_3072838436303106_8402354931433032745_n.jpg?_nc_cat=109&ccb=1-7&_nc_sid=09cbfe&_nc_ohc=gQKdSzTZAMMAX8nkJe5&_nc_ht=scontent.fsgn2-4.fna&oh=00_AfBmer_J-Hw3HiInL9srHVcp_FI3MimR1oZSjPihq9blog&oe=636707C7" alt="" class="header__navbar-user-img">
                             <span class="header__navbar-user-name">Huu Dong</span>
 
@@ -59,7 +59,7 @@
                                     <a href="">Log Out</a>
                                 </li>
                             </ul>
-                        </li>
+                        </li>*@
                     </ul>
                 </nav>
 
@@ -72,17 +72,6 @@
                         <form style="display:contents" asp-controller="Home" asp-action="Search" method="get">
                             <div class="header__search-input-wrap">
                                 <input id="product" name="product" type="text" class="header__search-input" placeholder="Search product">
-                                <div class="header__search-history">
-                                    <h3 class="header__search-history-heading">History</h3>
-                                    <ul class="header__search-history-list">
-                                        <li class="header__search-history-item">
-                                            <a href="">Áo</a>
-                                        </li>
-                                        <li class="header__search-history-item">
-                                            <a href="">Quần</a>
-                                        </li>
-                                    </ul>
-                                </div>
                             </div>
                             <button type="submit" class="header__search-btn">
                                 <i class="header__search-btn-icon fas fa-search"></i>
