--- a/CustomersSite/Views/Shared/Components/Products/Default.cshtml
+++ b/CustomersSite/Views/Shared/Components/Products/Default.cshtml
@@ -55,7 +55,7 @@
                             @products.Name
                         </h4>
                         <div class="home-product-item__price">
-                            <span class="home-product-item__price-old">1.200.000đ</span>
+                            <span class="home-product-item__price-old">@products.OldPrice.000đ</span>
                             <span class="home-product-item__price-current">@products.Price.000đ</span>
                         </div>
                         <div class="home-product-item__action">
