--- a/nashassignment/src/App.css
+++ b/nashassignment/src/App.css
@@ -136,6 +136,24 @@ display: inline-block;
   transform: translateY(-50%);
 }
 
+.btn-custom{
+  position: relative;
+  min-height: 25px;
+  text-decoration: none;
+  border: none;
+  border-radius: 2px;
+  font-size: 1.5rem;
+  padding: 0 12px;
+  outline: none;
+  cursor: pointer;
+  color: var(--white-color);
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  line-height: 1.6rem;
+  background-color: var(--primary-color);
+}
+
 /* Header QR code */
 .header__qr{
   width: 186px;
@@ -582,6 +600,9 @@ display: inline-block;
 }
 
 .category-heading{
+  display: flex;
+  justify-content: space-between;
+  position: relative;
   font-size: 1.7rem;
   color: var(--text-color);
   padding: 12px 16px;
@@ -628,6 +649,7 @@ display: inline-block;
 }
 
 .category-item-link:hover{
+  cursor: pointer;
   right: -4px;
   color: var(--primary-color);
 }
