--- a/nashassignment/src/App.css
+++ b/nashassignment/src/App.css
@@ -154,6 +154,71 @@ display: inline-block;
   background-color: var(--primary-color);
 }
 
+.btn-custom-item{
+  margin-right: 5px;
+  margin-top: 3px;
+  height: 25px;
+  position: relative;
+  text-decoration: none;
+  border: none;
+  border-radius: 2px;
+  font-size: 1rem;
+  padding: 0 12px;
+  outline: none;
+  cursor: pointer;
+  color: var(--white-color);
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  line-height: 0.6rem;
+  background-color: var(--primary-color)
+}
+
+/* three-dots */
+.three-dots:after {
+  cursor: pointer;
+  content: '\2807';
+  font-size: 20px;
+  padding: 0 5px;
+  }
+
+  a {
+  text-decoration: none;
+  color: var(--text-color);
+  }
+
+  a div {
+  padding: 2px;
+  }
+
+  .dropdown {
+  position: absolute;
+  outline: none;
+  opacity: 0;
+  z-index: -1;
+  max-height: 0;
+  }
+
+  .dropdown > a{
+    text-decoration: none;
+    color: var(--text-color);
+  }
+
+  .dropdown-container{
+    display: flex;
+  }
+
+  .dropdown-container:focus {
+  outline: none;
+  }
+
+  .dropdown-container:focus .dropdown {
+    display: block;
+    opacity: 1;
+    z-index: 100;
+    max-height: 100vh;
+  }
+
 /* Header QR code */
 .header__qr{
   width: 186px;
@@ -623,6 +688,11 @@ display: inline-block;
   margin-left: 9px;
 }
 
+.category-item{
+  display: flex;
+  justify-content: space-around;
+}
+
 .category-item--active .category-item-link{
   color: var(--primary-color);
 }
@@ -638,6 +708,7 @@ display: inline-block;
 }
 
 .category-item-link{
+  min-width: 80px;
   position: relative;
   color: var(--text-color);
   font-size: 1.5rem;
@@ -728,6 +799,23 @@ display: inline-block;
 
 .home-product{
   margin-bottom: 10px;
+}
+
+.product-item{
+  display: flex;
+  justify-content: space-between;
+}
+
+.product-item-link{
+  min-width: 500px;
+  position: relative;
+  color: var(--text-color);
+  font-size: 1.5rem;
+  text-decoration: none;
+  padding: 4px 16px;
+  display: block;
+  transition: right linear 0.1s;
+  right: 0;
 }
 
 .home-product-item{
