--- a/CustomersSite/Views/Home/Detail.cshtml
+++ b/CustomersSite/Views/Home/Detail.cshtml
@@ -2,7 +2,7 @@
 
     <main role="main">
         <div class="container mt-4">
-            <div class="card">
+            <div class="card title">
                 <div class="container-fluid">
                     <h3>Thông tin chi tiết về Sản phẩm</h3>
                 </div>
@@ -93,6 +93,9 @@
                 </div>
             </div>
 
+            @*render ratings*@
+            <vc:ratings></vc:ratings>
+            
         </div>
         <!-- End block content -->
     </main>
