update Rating and view Customer

--- a/CustomersSite/wwwroot/css/main.css
+++ b/CustomersSite/wwwroot/css/main.css
@@ -849,3 +849,60 @@
     display: flex;
     flex-direction: column;
 }
+
+h1 {
+    font-size: 1.5em;
+    margin: 10px;
+}
+
+/* Rating */
+#rating {
+    border: none;
+    float: left;
+    position: relative;
+    left: -950px;
+}
+
+#rating > input {
+    display: none;
+}
+
+#rating > label:before {
+    margin: 5px;
+    font-size: 1.25em;
+    font-family: FontAwesome;
+    display: inline-block;
+    content: "\f005";
+}
+
+#rating > label {
+    color: #ddd;
+    float: right;
+}
+
+#rating > input:checked ~ label,
+#rating:not(:checked) > label:hover,
+#rating:not(:checked) > label:hover ~ label {
+    color: #FFD700;
+}
+#rating > input:checked + label:hover,
+#rating > input:checked ~ label:hover,
+#rating > label:hover ~ input:checked ~ label,
+#rating > input:checked ~ label:hover ~ label {
+    color: #FFED85;
+}
+
+.form-add {
+    display: flex;
+    flex-direction: column;
+}
+
+.comment {
+    font-size: 1.3rem;
+    margin-bottom: 10px;
+}
+
+.btn-submit-add {
+    height: 4.4rem;
+    margin-top: 10px;
+}
