--- a/CustomersSite/Views/Shared/Components/Ratings/Default.cshtml
+++ b/CustomersSite/Views/Shared/Components/Ratings/Default.cshtml
@@ -4,6 +4,32 @@
     <div class="container-fluid">
         <h3>Đánh giá sản phẩm</h3>
     </div>
+
+    <div class="form-feedback">
+        <form class="form-add" asp-controller=Home asp-action=AddRating>
+            <div id="rating">
+                <input type="radio" id="star5" name="rating" value="5" />
+                <label class="full" for="star5" title="Awesome - 5 stars"></label>
+
+                <input type="radio" id="star4" name="rating" value="4" />
+                <label class="full" for="star4" title="Pretty good - 4 stars"></label>
+
+                <input type="radio" id="star3" name="rating" value="3" />
+                <label class="full" for="star3" title="Meh - 3 stars"></label>
+
+                <input type="radio" id="star2" name="rating" value="2" />
+                <label class="full" for="star2" title="Kinda bad - 2 stars"></label>
+
+                <input type="radio" id="star1" name="rating" value="1" />
+                <label class="full" for="star1" title="Sucks big time - 1 star"></label>
+            </div>
+
+            <label class="comment" for="comment">Your comment</label>
+            <textarea id="comment" name="comment" placeholder="Write something.." style="height:200px;font-size: 1.5rem;"></textarea>
+
+            <input class="btn-submit-add btn-primary" type="submit" value="Submit" style="">
+        </form>
+    </div>
 </div>
 
 <div class="card">
@@ -38,3 +64,11 @@
         <hr style="border:3px solid #f1f1f1">
     }
 </div>
+
+<script>
+    function calcRate(r) {
+        const f = ~~r,//Tương tự Math.floor(r)
+        id = 'star' + f
+        id && (document.getElementById(id).checked = !0)
+    }
+</script>
